--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-amber-50">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8"/>
+		<title>is @n @dult.</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
