asset placement changes + vite config

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class=" bg-[url('cloud.jpeg')] bg-cover bg-center bg-no-repeat bg-indigo-700 bg-blend-screen bg-opacity-50 flex flex-col">
+<html lang="en" class=" bg-[url('$lib/assets/cloud.jpeg')] bg-cover bg-center bg-no-repeat bg-indigo-700 bg-blend-screen bg-opacity-50 flex flex-col">
 	<head>
 		<meta charset="utf-8"/>
 		<title>is @n @dult.</title>
